fix: Fix some deprecations and safe delete unused codes